# inline-timer

./: README.md  pyproject.toml  setup.py  tests.py
inline_timer/: __init__.py  inline_timer.py
