[tool.poetry]
name = "inline-timer"
version = "0.2.0"
description = "Show the running time of processes"
authors = ["Michael Van Wickle <mvanwickle@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
